--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    overflow-x: hidden;
+  }
+  div {
+    position: relative;
+    min-height: 100vh;
+  }
+</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Madison Ammirati Portfolio</title>
