--- a/index.html
+++ b/index.html
@@ -1,55 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    overflow-x: hidden;
-  }
-  div {
-    position: relative;
-    min-height: 100vh;
-  }
-</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Madison Ammirati Portfolio</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      overflow-x: hidden;
+      overflow-y: auto;
+      font-family: Inter, sans-serif;
+      color: white;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      margin-right: 24px;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #080300;
+      border-bottom: 1px solid white;
+      padding: 20px 40px;
+      z-index: 1000;
+    }
+    main {
+      margin-top: 120px;
+      padding: 20px;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 30px auto;
+    }
+    section {
+      margin-bottom: 80px;
+    }
+  </style>
 </head>
-<body style="margin:0;">
-<div style="width: 100%; height: 100%; position: relative; background: black; overflow: hidden">
-  <!-- Navigation Bar -->
-  <div style="width: 1440px; height: 81px; padding: 32px; position: absolute; background: #080300; border-bottom: 1px white solid; display: flex; align-items: center; gap: 24px;">
-    <a href="index.html" style="color: white; font-size: 22px; font-family: Inter; font-weight: 600; text-decoration: none;">Home</a>
-    <a href="leadership.html" style="color: white; font-size: 22px; font-family: Inter; font-weight: 600; text-decoration: none;">Leadership Experience</a>
-    <a href="projects.html" style="color: white; font-size: 22px; font-family: Inter; font-weight: 600; text-decoration: none;">Projects</a>
-    <a href="contact.html" style="color: white; font-size: 22px; font-family: Inter; font-weight: 600; text-decoration: none;">Contact</a>
-  </div>
+<body>
+  <header>
+    <a href="index.html">Home</a>
+    <a href="leadership.html">Leadership Experience</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </header>
 
-  <!-- Hero -->
-  <img style="width: 2156.64px; height: 641px; left: -358.32px; top: 81px; position: absolute" src="https://placehold.co/2157x641" />
-  <div style="width: 1604px; left: -61.78px; top: 328.11px; position: absolute; display: flex; flex-direction: column; align-items: center;">
-    <h1 style="color: white; font-size: 72px; font-family: Roboto Mono; font-weight: 700;">Madison Ammirati Portfolio</h1>
-  </div>
+  <main>
+    <section style="text-align:center;">
+      <h1 style="font-size: 64px; font-family: 'Roboto Mono', monospace;">Madison Ammirati Portfolio</h1>
+      <img src="https://placehold.co/1200x400" alt="Portfolio banner">
+    </section>
 
-  <!-- About -->
-  <img style="width: 244px; height: 244px; left: 41px; top: 768px; position: absolute" src="https://placehold.co/244x244" />
-  <div style="position: absolute; left: 329px; top: 754px; color: white; font-size: 33px; font-family: Inter; font-weight: 600;">About Me</div>
-  <p style="position: absolute; left: 324px; top: 794px; width: 1094px; color: white; font-size: 18px; font-family: Inter;">
-    Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.
-  </p>
+    <section>
+      <h2>About Me</h2>
+      <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
+    </section>
 
-  <!-- Skills -->
-  <div style="position: absolute; left: 329px; top: 890px; color: white; font-family: Inter;">
-    <h2>Skills</h2>
-    <p>
-      <strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL<br>
-      <strong>Framework and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai<br>
-      <strong>Design / UI:</strong> Adobe Audition, Figma, GIMP<br>
-      <strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)
-    </p>
-  </div>
-</div>
+    <section>
+      <h2>Skills</h2>
+      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL</p>
+      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai</p>
+      <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
+      <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
+    </section>
+  </main>
 </body>
 </html>
