--- a/leadership.html
+++ b/leadership.html
@@ -1,53 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    overflow-x: hidden;
-  }
-  div {
-    position: relative;
-    min-height: 100vh;
-  }
-</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leadership Experience - Madison Ammirati</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #02002F;
+      color: white;
+      font-family: Inter, sans-serif;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #080300;
+      border-bottom: 1px solid white;
+      padding: 20px 40px;
+      z-index: 1000;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      margin-right: 24px;
+    }
+    a:hover { text-decoration: underline; }
+    main {
+      margin-top: 120px;
+      padding: 20px;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .card {
+      background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
+      border-radius: 8px;
+      padding: 24px;
+      margin-bottom: 30px;
+    }
+    .card h3 {
+      margin-top: 0;
+    }
+  </style>
 </head>
-<body style="margin:0;">
-<div style="width: 100%; position: relative; background: white; overflow: hidden">
-  <!-- Navigation -->
-  <div style="width: 1440px; height: 81px; padding: 32px; position: absolute; background: #080300; border-bottom: 1px white solid; display: flex; align-items: center; gap: 24px;">
-    <a href="index.html" style="color: white; font-size: 22px; text-decoration:none;">Home</a>
-    <a href="leadership.html" style="color: white; font-size: 22px; text-decoration:none;">Leadership Experience</a>
-    <a href="projects.html" style="color: white; font-size: 22px; text-decoration:none;">Projects</a>
-    <a href="contact.html" style="color: white; font-size: 22px; text-decoration:none;">Contact</a>
-  </div>
+<body>
+  <header>
+    <a href="index.html">Home</a>
+    <a href="leadership.html">Leadership Experience</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </header>
 
-  <!-- Content -->
-  <div style="width: 1454px; height: 762px; top: 81px; position: absolute; background: #02002F;"></div>
-  <h1 style="color: white; position: absolute; top: 126px; left: 38px; font-size: 50px; font-family: Inter;">Leadership Experience</h1>
+  <main>
+    <h1>Leadership Experience</h1>
 
-  <div style="position: absolute; left: 64px; top: 220px; width: 411px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); border-radius: 8px; padding: 24px; color: white;">
-    <h2>Responsible Computing Club</h2>
-    <p><strong>Lead Industry Mozilla Ambassador</strong></p>
-    <p>Led initiatives promoting ethical technology use by planning and executing 7+ events per semester. Managed a team of 4, coordinated speaker events, and collaborated with organizations for professional development opportunities.</p>
-  </div>
+    <div class="card">
+      <h3>Responsible Computing Club</h3>
+      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
+      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Managed a team of 4 to coordinate speaker events and workshops with industry professionals.</p>
+    </div>
 
-  <div style="position: absolute; left: 514px; top: 220px; width: 411px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); border-radius: 8px; padding: 24px; color: white;">
-    <h2>IDEAs Entrepreneurship Club</h2>
-    <p><strong>System Architect</strong></p>
-    <p>Organized events boosting membership by 5% and supported executive growth through recruitment and team coordination. Managed meetings and logistics to enhance campus leadership in technology.</p>
-  </div>
+    <div class="card">
+      <h3>IDEAs Entrepreneurship Club</h3>
+      <p><strong>System Architect</strong></p>
+      <p>Organized events boosting membership by 5% and supported executive board growth through recruitment and team coordination. Managed meetings and logistics to enhance campus leadership in technology.</p>
+    </div>
 
-  <div style="position: absolute; left: 961px; top: 220px; width: 411px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); border-radius: 8px; padding: 24px; color: white;">
-    <h2>Firefox</h2>
-    <p><strong>Student Ambassador</strong></p>
-    <p>Launched the Firefox Student Ambassador program, organized events, and built brand presence through creative outreach, promotions, and campus engagement.</p>
-  </div>
-</div>
+    <div class="card">
+      <h3>Firefox</h3>
+      <p><strong>Student Ambassador</strong></p>
+      <p>Helped launch the Firefox Student Ambassador program on campus. Built brand presence through creative events, website design, and community outreach.</p>
+    </div>
+  </main>
 </body>
 </html>
