--- a/projects.html
+++ b/projects.html
@@ -1,52 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    overflow-x: hidden;
-  }
-  div {
-    position: relative;
-    min-height: 100vh;
-  }
-</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects - Madison Ammirati</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: #02002F;
+      color: white;
+      font-family: Inter, sans-serif;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #080300;
+      border-bottom: 1px solid white;
+      padding: 20px 40px;
+      z-index: 1000;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      margin-right: 24px;
+    }
+    a:hover { text-decoration: underline; }
+    main {
+      margin-top: 120px;
+      padding: 20px;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .card {
+      background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
+      border-radius: 8px;
+      padding: 24px;
+      margin-bottom: 30px;
+    }
+    .card h3 { margin-top: 0; }
+  </style>
 </head>
-<body style="margin:0;">
-<div style="width: 100%; position: relative; background: white; overflow: hidden;">
-  <!-- Navigation -->
-  <div style="width: 1440px; height: 81px; padding: 32px; position: absolute; background: #080300; border-bottom: 1px white solid; display: flex; align-items: center; gap: 24px;">
-    <a href="index.html" style="color: white; font-size: 22px; text-decoration:none;">Home</a>
-    <a href="leadership.html" style="color: white; font-size: 22px; text-decoration:none;">Leadership Experience</a>
-    <a href="projects.html" style="color: white; font-size: 22px; text-decoration:none;">Projects</a>
-    <a href="contact.html" style="color: white; font-size: 22px; text-decoration:none;">Contact</a>
-  </div>
+<body>
+  <header>
+    <a href="index.html">Home</a>
+    <a href="leadership.html">Leadership Experience</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </header>
 
-  <div style="width: 1454px; height: 770px; top: 73px; position: absolute; background: #02002F;"></div>
-  <h1 style="position: absolute; color: white; top: 126px; left: 40px; font-size: 50px; font-family: Inter;">Projects</h1>
+  <main>
+    <h1>Projects</h1>
 
-  <div style="position: absolute; left: 64px; top: 220px; width: 410px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); padding: 24px; border-radius: 8px; color: white;">
-    <h2>EPA ESA Web App</h2>
-    <p><strong>User Research Lead</strong></p>
-    <p>Designed a web platform for farmers to identify pesticide options by region. Created an interactive Figma prototype and assisted with React Native implementation.</p>
-  </div>
+    <div class="card">
+      <h3>EPA ESA Web App</h3>
+      <p><strong>User Research Lead</strong></p>
+      <p>Designed a centralized platform to help farmers identify pesticide options by region. Built an interactive Figma prototype and supported development in React Native and JavaScript.</p>
+    </div>
 
-  <div style="position: absolute; left: 514px; top: 220px; width: 410px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); padding: 24px; border-radius: 8px; color: white;">
-    <h2>Reef Guardian Game</h2>
-    <p><strong>System Architect</strong></p>
-    <p>Built a Java side-scroller game as system architect; contributed to UML, gameplay logic, and debugging, merging design and storytelling.</p>
-  </div>
+    <div class="card">
+      <h3>Reef Guardian Game</h3>
+      <p><strong>System Architect</strong></p>
+      <p>Worked on a 5-person team to design and develop a Java side-scroller game. Created UML diagrams and gameplay logic, merging technical and narrative-driven design.</p>
+    </div>
 
-  <div style="position: absolute; left: 961px; top: 220px; width: 410px; background: linear-gradient(180deg, #0E0202 0%, #07017E 100%); padding: 24px; border-radius: 8px; color: white;">
-    <h2>Engineering Labs</h2>
-    <p><strong>Developer</strong></p>
-    <p>Developed 12+ Java labs covering OOP, data structures, debugging, inheritance, and polymorphism, gaining hands-on development experience.</p>
-  </div>
-</div>
+    <div class="card">
+      <h3>Engineering Labs</h3>
+      <p><strong>Developer</strong></p>
+      <p>Developed 12+ Java labs focused on OOP, data structures, and debugging. Gained hands-on experience with inheritance, polymorphism, and encapsulation.</p>
+    </div>
+  </main>
 </body>
 </html>
