--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       font-weight: 600;
       margin-right: 24px;
     }
-    a:hover {
-      text-decoration: underline;
-    }
+    a:hover { text-decoration: underline; }
     header {
       position: fixed;
       top: 0;
@@ -45,6 +43,7 @@
       height: auto;
       display: block;
       margin: 30px auto;
+      border-radius: 8px;
     }
     section {
       margin-bottom: 80px;
@@ -62,10 +61,11 @@
   <main>
     <section style="text-align:center;">
       <h1 style="font-size: 64px; font-family: 'Roboto Mono', monospace;">Madison Ammirati Portfolio</h1>
-      <img src="https://placehold.co/1200x400" alt="Portfolio banner">
+      <img src="images/banner.png" alt="Banner image of beach and sun">
     </section>
 
-    <section>
+    <section style="text-align:center;">
+      <img src="images/headshot.png" alt="Headshot of Madison Ammirati" style="width:244px;height:auto;border-radius:50%;">
       <h2>About Me</h2>
       <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
     </section>
