--- a/leadership.html
+++ b/leadership.html
@@ -44,8 +44,10 @@
       padding: 24px;
       margin-bottom: 30px;
     }
-    .card h3 {
-      margin-top: 0;
+    .card img {
+      max-width: 200px;
+      display: block;
+      margin: 10px auto;
     }
   </style>
 </head>
@@ -64,18 +66,21 @@
       <h3>Responsible Computing Club</h3>
       <p><strong>Lead Industry Mozilla Ambassador</strong></p>
       <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Managed a team of 4 to coordinate speaker events and workshops with industry professionals.</p>
+      <img src="images/RCC.png" alt="Responsible Computing Club logo">
     </div>
 
     <div class="card">
       <h3>IDEAs Entrepreneurship Club</h3>
       <p><strong>System Architect</strong></p>
       <p>Organized events boosting membership by 5% and supported executive board growth through recruitment and team coordination. Managed meetings and logistics to enhance campus leadership in technology.</p>
+      <img src="images/ideas.png" alt="IDEAs Club logo">
     </div>
 
     <div class="card">
       <h3>Firefox</h3>
       <p><strong>Student Ambassador</strong></p>
       <p>Helped launch the Firefox Student Ambassador program on campus. Built brand presence through creative events, website design, and community outreach.</p>
+      <img src="images/FireFox.png" alt="Firefox logo">
     </div>
   </main>
 </body>
