--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
       margin: 30px auto;
       border-radius: 8px;
     }
+    .headshot {
+      width: 244px;
+      border-radius: 50%;
+      margin-top: 20px;
+    }
     section {
       margin-bottom: 80px;
     }
@@ -61,11 +66,11 @@
   <main>
     <section style="text-align:center;">
       <h1 style="font-size: 64px; font-family: 'Roboto Mono', monospace;">Madison Ammirati Portfolio</h1>
-      <img src="images/banner.png" alt="Banner image of beach and sun">
+      <img src="images/banner.png" alt="Banner with beach and sun">
     </section>
 
     <section style="text-align:center;">
-      <img src="images/headshot.png" alt="Headshot of Madison Ammirati" style="width:244px;height:auto;border-radius:50%;">
+      <img src="images/headshot.png" alt="Headshot of Madison Ammirati" class="headshot">
       <h2>About Me</h2>
       <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
     </section>
