--- a/leadership.html
+++ b/leadership.html
@@ -48,6 +48,7 @@
       max-width: 200px;
       display: block;
       margin: 10px auto;
+      border-radius: 8px;
     }
   </style>
 </head>
@@ -63,13 +64,6 @@
     <h1>Leadership Experience</h1>
 
     <div class="card">
-      <h3>Responsible Computing Club</h3>
-      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
-      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Managed a team of 4 to coordinate speaker events and workshops with industry professionals.</p>
-      <img src="images/RCC.png" alt="Responsible Computing Club logo">
-    </div>
-
-    <div class="card">
       <h3>IDEAs Entrepreneurship Club</h3>
       <p><strong>System Architect</strong></p>
       <p>Organized events boosting membership by 5% and supported executive board growth through recruitment and team coordination. Managed meetings and logistics to enhance campus leadership in technology.</p>
@@ -77,7 +71,14 @@
     </div>
 
     <div class="card">
-      <h3>Firefox</h3>
+      <h3>Responsible Computing Club</h3>
+      <p><strong>Lead Industry Mozilla Ambassador</strong></p>
+      <p>Led initiatives to promote responsible computing and ethical technology use by planning and executing 7+ events each semester. Managed a team of 4 to coordinate speaker events and workshops with industry professionals.</p>
+      <img src="images/RCC.png" alt="Responsible Computing Club logo">
+    </div>
+
+    <div class="card">
+      <h3>Firefox Student Ambassador</h3>
       <p><strong>Student Ambassador</strong></p>
       <p>Helped launch the Firefox Student Ambassador program on campus. Built brand presence through creative events, website design, and community outreach.</p>
       <img src="images/FireFox.png" alt="Firefox logo">
