--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
       margin: 0;
       padding: 0;
       background: black;
+      color: white;
+      font-family: "Inter", sans-serif;
       overflow-x: hidden;
-      overflow-y: auto;
-      font-family: Inter, sans-serif;
-      color: white;
     }
-    a {
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      margin-right: 24px;
-    }
-    a:hover { text-decoration: underline; }
     header {
       position: fixed;
       top: 0;
@@ -28,29 +20,38 @@
       width: 100%;
       background: #080300;
       border-bottom: 1px solid white;
-      padding: 20px 40px;
+      padding: 20px 0;
+      text-align: center;
       z-index: 1000;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 600;
+      margin: 0 20px;
+      font-size: 18px;
+      transition: color 0.2s ease;
+    }
+    nav a:hover {
+      color: #ddd;
+      text-decoration: underline;
     }
     main {
       margin-top: 120px;
-      padding: 20px;
-      max-width: 1100px;
+      padding: 0 20px 60px;
+      text-align: center;
+      max-width: 1000px;
       margin-left: auto;
       margin-right: auto;
     }
-    section {
-      margin-bottom: 80px;
-    }
-    /* Banner section with overlay */
     .banner-container {
       position: relative;
       text-align: center;
-      color: white;
+      margin-bottom: 80px;
     }
     .banner-container img {
       width: 100%;
       height: auto;
-      display: block;
       border-radius: 0;
     }
     .banner-text {
@@ -58,40 +59,55 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      text-align: center;
-      background: rgba(0, 0, 0, 0.4);
-      padding: 20px 40px;
-      border-radius: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 30px 50px;
+      border-radius: 12px;
     }
     .banner-text h1 {
-      font-size: 60px;
       font-family: 'Roboto Mono', monospace;
+      font-size: 60px;
       margin: 0;
     }
     .banner-text p {
-      font-size: 20px;
+      font-size: 22px;
       margin-top: 10px;
     }
-    .headshot {
-      width: 244px;
+    section {
+      margin-bottom: 80px;
+    }
+    img.headshot {
+      width: 220px;
       border-radius: 50%;
-      margin-top: 20px;
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto 20px;
+      border: 4px solid white;
+    }
+    h2 {
+      font-size: 32px;
+      border-bottom: 2px solid white;
+      display: inline-block;
+      padding-bottom: 5px;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto 20px;
     }
   </style>
 </head>
 <body>
   <header>
-    <a href="index.html">Home</a>
-    <a href="leadership.html">Leadership Experience</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
   <main>
-    <!-- Banner with overlay text -->
     <section class="banner-container">
       <img src="images/banner.png" alt="Banner background image">
       <div class="banner-text">
@@ -100,7 +116,7 @@
       </div>
     </section>
 
-    <section style="text-align:center;">
+    <section>
       <img src="images/headshot.png" alt="Headshot of Madison Ammirati" class="headshot">
       <h2>About Me</h2>
       <p>Motivated and detail-oriented aspiring Software Engineer seeking internship opportunities to leverage academic knowledge and gain hands-on experience in the field. Highly adept at problem-solving, software development, and team collaboration, with a strong commitment to innovation and excellence.</p>
