--- a/leadership.html
+++ b/leadership.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leadership Experience - Madison Ammirati</title>
+  <title>Leadership - Madison Ammirati</title>
   <style>
-    html, body {
+    body {
       margin: 0;
       padding: 0;
       background: #02002F;
       color: white;
       font-family: Inter, sans-serif;
+      text-align: center;
       overflow-x: hidden;
-      overflow-y: auto;
     }
     header {
       position: fixed;
@@ -21,43 +21,68 @@
       width: 100%;
       background: #080300;
       border-bottom: 1px solid white;
-      padding: 20px 40px;
+      padding: 20px 0;
       z-index: 1000;
     }
-    a {
+    nav a {
       color: white;
       text-decoration: none;
       font-weight: 600;
-      margin-right: 24px;
+      margin: 0 20px;
+      font-size: 18px;
+      transition: color 0.2s ease;
     }
-    a:hover { text-decoration: underline; }
+    nav a:hover {
+      color: #ddd;
+      text-decoration: underline;
+    }
     main {
       margin-top: 120px;
-      padding: 20px;
-      max-width: 1100px;
+      padding: 40px 20px;
+      max-width: 1000px;
       margin-left: auto;
       margin-right: auto;
     }
+    h1 {
+      margin-bottom: 50px;
+      font-size: 40px;
+      border-bottom: 2px solid white;
+      display: inline-block;
+      padding-bottom: 8px;
+    }
     .card {
       background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
-      border-radius: 8px;
-      padding: 24px;
-      margin-bottom: 30px;
+      border-radius: 12px;
+      padding: 30px;
+      margin-bottom: 50px;
+      box-shadow: 0 0 15px rgba(255,255,255,0.1);
+    }
+    .card h3 {
+      font-size: 26px;
+      margin-bottom: 10px;
+    }
+    .card p {
+      font-size: 18px;
+      line-height: 1.6;
+      max-width: 800px;
+      margin: 0 auto 10px;
     }
     .card img {
-      max-width: 200px;
       display: block;
-      margin: 10px auto;
+      margin: 30px auto 10px;
+      max-width: 200px;
       border-radius: 8px;
     }
   </style>
 </head>
 <body>
   <header>
-    <a href="index.html">Home</a>
-    <a href="leadership.html">Leadership Experience</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="leadership.html">Leadership</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
   <main>
