--- a/projects.html
+++ b/projects.html
@@ -10,10 +10,11 @@
       padding: 0;
       background: #02002F;
       color: white;
-      font-family: Inter, sans-serif;
+      font-family: "Inter", sans-serif;
       text-align: center;
       overflow-x: hidden;
     }
+
     header {
       position: fixed;
       top: 0;
@@ -24,6 +25,7 @@
       padding: 20px 0;
       z-index: 1000;
     }
+
     nav a {
       color: white;
       text-decoration: none;
@@ -32,17 +34,20 @@
       font-size: 18px;
       transition: color 0.2s ease;
     }
+
     nav a:hover {
       color: #ddd;
       text-decoration: underline;
     }
+
     main {
       margin-top: 120px;
-      padding: 40px 20px;
-      max-width: 1000px;
+      padding: 40px 20px 80px;
+      max-width: 1100px;
       margin-left: auto;
       margin-right: auto;
     }
+
     h1 {
       margin-bottom: 50px;
       font-size: 40px;
@@ -50,26 +55,62 @@
       display: inline-block;
       padding-bottom: 8px;
     }
+
+    .projects-container {
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+    }
+
     .card {
       background: linear-gradient(180deg, #0E0202 0%, #07017E 100%);
       border-radius: 12px;
       padding: 30px;
-      margin-bottom: 50px;
       box-shadow: 0 0 15px rgba(255,255,255,0.1);
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+
+    .card:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 25px rgba(255,255,255,0.2);
+    }
+
     .card h3 {
-      font-size: 28px;
+      font-size: 26px;
       margin-bottom: 10px;
     }
+
     .card p {
       font-size: 18px;
       line-height: 1.6;
+      max-width: 900px;
+      margin: 0 auto 10px;
     }
+
     .card img {
       display: block;
       margin: 30px auto 10px;
       max-width: 400px;
       border-radius: 8px;
+    }
+
+    footer {
+      background: #0E0202;
+      border-top: 1px solid #080300;
+      padding: 40px 0;
+      margin-top: 50px;
+    }
+
+    footer p {
+      font-size: 16px;
+      color: #aaa;
+    }
+
+    @media (max-width: 768px) {
+      .card img {
+        max-width: 90%;
+      }
     }
   </style>
 </head>
@@ -86,12 +127,33 @@
   <main>
     <h1>Projects</h1>
 
-    <div class="card">
-      <h3>Reef Guardian Game</h3>
-      <p><strong>System Architect</strong></p>
-      <p>Worked on a 5-person team to design and develop a Java side-scroller game. Created UML diagrams and gameplay logic, merging technical and narrative-driven design.</p>
-      <img src="images/reefgame.png" alt="Reef Guardian Game image">
+    <div class="projects-container">
+      <!-- EPA ESA Web App -->
+      <div class="card">
+        <h3>EPA ESA Web App</h3>
+        <p><strong>User Research Lead</strong></p>
+        <p>Led user research for a 3-person team during a summer internship to design a centralized web platform that helps farmers identify pesticide options based on region and regulations. Created an interactive Figma prototype, iterated through user feedback, and supported development with React Native and JavaScript to bridge design and implementation.</p>
+      </div>
+
+      <!-- Reef Guardian Game -->
+      <div class="card">
+        <h3>Reef Guardian Game</h3>
+        <p><strong>System Architect</strong></p>
+        <p>Worked on a 5-person team to design and develop a Java side-scroller game. Served as system architect by creating UML diagrams and flowcharts, and contributed to gameplay logic, debugging, and optimization, blending technical work with narrative-driven design.</p>
+        <img src="images/reefgame.png" alt="Reef Guardian Game">
+      </div>
+
+      <!-- Engineering Labs -->
+      <div class="card">
+        <h3>Engineering Labs</h3>
+        <p><strong>Developer</strong></p>
+        <p>Developed advanced Java applications through 12+ labs, gaining hands-on experience with object-oriented programming, data structures, debugging, and core concepts like inheritance, polymorphism, and encapsulation.</p>
+      </div>
     </div>
   </main>
+
+  <footer>
+    <p>© 2025 Madison Ammirati Portfolio</p>
+  </footer>
 </body>
 </html>
