--- a/leadership.html
+++ b/leadership.html
@@ -127,7 +127,7 @@
     <!-- IDEAs Entrepreneurship Club -->
     <div class="card">
       <h3>IDEAs Entrepreneurship Club</h3>
-      <p><strong>System Architect</strong></p>
+      <p><strong>Vice President</strong></p>
       <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
       <img src="images/ideas.png" alt="IDEAs Club logo">
     </div>
