--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
     <section>
       <h2>Skills</h2>
-      <p><strong>Programming Languages:</strong> Java, HTML, Assembly, C++, Python, JavaScript, SQL</p>
-      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, SQL Workspace, Soloist.ai</p>
+      <p><strong>Programming Languages:</strong> Java, HTML, CSS, Assembly, C++, Python, JavaScript, SQL</p>
+      <p><strong>Frameworks and Tools:</strong> Git, Eclipse, Visual Studio, IntelliJ, Easy C, VS Code, LibGDX, JavaFX, React, Node.js, SQL Workspace, Soloist.ai</p>
       <p><strong>Design / UI:</strong> Adobe Audition, Figma, GIMP</p>
       <p><strong>Certifications:</strong> Microsoft’s Python Programming Fundamentals (Coursera)</p>
     </section>
