--- a/leadership.html
+++ b/leadership.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leadership Experience - Madison Ammirati</title>
+  <title>Leadership - Madison Ammirati</title>
   <style>
     html, body {
       margin: 0;
@@ -12,7 +12,6 @@
       color: white;
       font-family: "Inter", sans-serif;
       overflow-x: hidden;
-      overflow-y: auto;
     }
 
     header {
@@ -33,12 +32,11 @@
       font-weight: 600;
       margin: 0 20px;
       font-size: 18px;
-      transition: color 0.2s ease;
     }
 
     nav a:hover {
-      color: #ddd;
       text-decoration: underline;
+      color: #dcdcdc;
     }
 
     main {
@@ -51,11 +49,11 @@
     }
 
     h1 {
-      margin-bottom: 50px;
       font-size: 40px;
       border-bottom: 2px solid white;
       display: inline-block;
       padding-bottom: 8px;
+      margin-bottom: 50px;
     }
 
     .card {
@@ -89,25 +87,26 @@
       margin: 30px auto 10px;
       max-width: 200px;
       border-radius: 8px;
+      box-shadow: 0 0 12px rgba(255,255,255,0.1);
     }
 
     footer {
       background: #0E0202;
-      border-top: 1px solid #080300;
-      padding: 40px 0;
-      margin-top: 50px;
+      color: white;
       text-align: center;
+      padding: 25px 0;
+      border-top: 1px solid #080300;
+      width: 100%;
+      position: relative;
+      bottom: 0;
+      left: 0;
+      font-size: 16px;
+      margin-top: 60px;
     }
 
     footer p {
-      font-size: 16px;
-      color: #aaa;
-    }
-
-    @media (max-width: 768px) {
-      .card img {
-        max-width: 90%;
-      }
+      margin: 0;
+      color: #bfbfbf;
     }
   </style>
 </head>
@@ -124,15 +123,13 @@
   <main>
     <h1>Leadership Experience</h1>
 
-    <!-- IDEAs Entrepreneurship Club -->
     <div class="card">
       <h3>IDEAs Entrepreneurship Club</h3>
-      <p><strong>Vice President</strong></p>
+      <p><strong>System Architect</strong></p>
       <p>Judged for SJ Hacks with 30+ applications, organized events that boosted membership by 5%, and supported executive board growth through recruitment, interviews, and team coordination. Managed meetings, event logistics, and budgeting to strengthen campus leadership in technology and entrepreneurship.</p>
       <img src="images/ideas.png" alt="IDEAs Club logo">
     </div>
 
-    <!-- Responsible Computing Club -->
     <div class="card">
       <h3>Responsible Computing Club</h3>
       <p><strong>Lead Industry Mozilla Ambassador</strong></p>
@@ -140,7 +137,6 @@
       <img src="images/RCC.png" alt="Responsible Computing Club logo">
     </div>
 
-    <!-- Firefox Student Ambassador -->
     <div class="card">
       <h3>Firefox Student Ambassador</h3>
       <p><strong>Student Ambassador</strong></p>
@@ -150,7 +146,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Madison Ammirati Portfolio</p>
+    <p>© 2025 Madison Ammirati | Portfolio</p>
   </footer>
 </body>
 </html>
